# sentinel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.virtual-hub.yml  pyproject.toml
.github/workflows/: e2e.yml  virtual-hub.yml
config/: targets.env.example  targets.gcp.env.example  targets.local.env.example  targets.virtual-hub.env.example
contracts/: check_ios_manifest.py  check_live_openapi.py  endpoints.manifest.yaml  hub_api_catalog.yaml  ios_hub_endpoints.manifest.yaml
docs/: CI_SECRETS.md  HUB_DEPENDENCIES.md  OCI_ALWAYS_FREE_RUNBOOK.md  VIRTUAL_CUSTOMER_HUB.md  WEBSITE_P0.md  run-local.md
docs/plans/: virtual-customer-hub-phase1.md
infra/gcp/: README.md
journeys/: bootstrap-manifest.yaml  catalog.yaml
lib/: __init__.py  common.sh  hub_transport.py  resolve_hub_host.sh
oracle/v0/: schema_activity.json
scripts/: bootstrap_hub.py  failure_summary.py  merge_junit.py  run-local.sh  verify-bootstrap.sh  verify_bootstrap.py  virtual-hub.sh  wait-for-hub.sh  wait-for-targets.sh
suites/: conftest.py
suites/core/: __init__.py  conftest.py  hub_catalog.py  test_api_catalog.py  test_j0_lan_gate.py  test_j1_hub_health.py  test_j2_caregiver_auth.py  test_j3_ha_states.py  test_j4_anomaly_lifecycle.py  test_j5_rooms_lifecycle.py  test_j6_logbook_note.py  test_j7_body_parse_regression.py
suites/functional/: conftest.py  test_casas_normaliser.py  test_hub_api_contracts.py
suites/ios/: README.md  run_hub_e2e.py  run_relay_e2e.py  run_xcuitest.sh
suites/website/: package.json  playwright.config.ts
suites/website/e2e/: p0-gate.spec.ts
virtual_hub/: bootstrap_ha.py
virtual_hub/ha-config/: configuration.yaml  secrets.yaml
virtual_hub/postgres-init/: 01-hcg.sql
virtual_hub/simulator/: Dockerfile  casas_normaliser.py  day_runner.py  ha_client.py
virtual_hub/simulator/scenarios/: idle_home.json  single_day_motion.json
