[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["suites*"]

[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel — HomeCareGuardian black-box live regression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=7.4.0",
    "pytest-timeout>=2.2.0",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=7.4.0",
    "pytest-timeout>=2.2.0",
    "PyYAML>=6.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["suites/core"]
python_files = ["test_*.py"]
markers = [
    "sentinel_e2e: Live hub black-box journey",
    "j0: Journey J0 — LAN-gate posture (hcg#640/#2333)",
    "j1: Journey J1 — hub health",
    "j2: Journey J2 — caregiver auth",
    "j3: Journey J3 — HA states via hub API",
    "j4: Journey J4 — anomaly lifecycle",
    "j5: Journey J5 — rooms create/list/delete round trip",
    "j6: Journey J6 — logbook note write path",
    "j7: Journey J7 — JSON-body parse regression probes (hcg#2505)",
    "api_catalog: Full hub GET API catalog smoke",
]
addopts = "-v --strict-markers --tb=short"
timeout = 120
